  add cdb
  add rangecheck.h
  add io_block
  make socket_(tc|ud)p[46] actually return non-blocking sockets as
    documented (Richard Lyons)
  fix for NetBSD 3.0 (Their /sys/types.h actually does not define u_char
    unless you #define _NETBSD_SOURCE, and then their CMSG_* macros use
    it.  This is horrible even by OpenBSD standards)
  remove support for ip6.int (it's no longer delegated)

0.24:
  fix scan_to_sa (Tim Lorenz)
  turns out we can not do file descriptor passing on OpenBSD
    if _XOPEN_SOURCE is defined, which is needed for Solaris.
    OpenBSD sucks.  I checked in a _really_ kludge now.  Please do not
    use OpenBSD if you have a choice.  Or Solaris, for that matter.
  turns out the imult routines (which I never used) were incorrect.
    Noted by Matthew Dempsky
  open_* from open.h now open in large file mode

0.23:
  also recognize EPFNOSUPPORT as EAFNOSUPPORT (groan)
  fix a few man pages
  optimize fmt_base64 (Dan Gundlach)
  gcc 4 cleanups (mostly unsigned char* vs char*)
  fix scan_xlong, scan_xlonglong and scan_8long
  remove a few gcc 4 warnings
  work around freebsd 5.4 brokenness (if you don't have IPv6 in the
    kernel, socket(PF_INET6,SOCK_STREAM,0) returns EPROTONOSUPPORT
    instead of EPFNOSUPPORT, which basically says "yeah, I know IPv6,
    but TCP?  never heard of it")
  remove even more warnings
  64-bit cleanliness issue with auto-NULL-appending macros
  IRIX compatibility (yuck!)

0.22:
  uh, the scope_id detection #defined the wrong constant.  libowfat
    always thought there was no scope_id.  Oops.
  #include <unistd.h> in io/io_sendfile.c (broken OpenBSD, thx Rob)
  add scan_urlencoded2 (like scan_urlencoded but will not convert '+' to
    ' '; needed for web servers, so they can serve libstdc++.tar.gz)
  fix iob_write to handle failure properly
  document that the iob_write callback should limit itself
  fix mmap_shared
  add iob_free, add man pages for iob_free and iob_reset